--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
             View source code on GitHub
           </a>
         </li>
+        <li>
+          Uploaded data is immediately discarded after processing
+        </li>
       </ul>
     </footer>
 
