only make list horizontal on larger screens

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       </textarea>
     </main>
     <footer class="p-4 text-sm text-gray-700">
-      <ul class="flex gap-8 list-disc list-inside">
+      <ul class="md:flex gap-8 list-disc list-inside">
         <li>
           <a target="_blank" href="https://www.linkedin.com/in/markmconnell/"
               class="hover:text-sky-700 transition duration-250 border-b border-gray-300 hover:border-sky-300">
