--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <title>EML to HTML</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="index, follow" />
+    <meta name="description"
+          content="Convert .eml files to HTML instantly. Drag and drop an .eml email file to view and extract its HTML content directly in your browser. No signup required." />
+    <meta name="keywords"
+          content="eml converter, eml viewer, eml to html, email to html, parse eml file, view eml online, .eml reader, rfc822 viewer" />
+
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100">
