--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,24 @@
 
       <input id="file-input" type="file" accept=".eml,message/rfc822" class="hidden" />
 
-      <textarea id="text-area"
-                class="hidden min-h-[75vh] w-full rounded-lg p-4 font-mono text-sm">
-      </textarea>
+      <div class="relative">
+        <textarea id="text-area"
+                  class="hidden min-h-[75vh] w-full rounded-lg p-4 font-mono text-sm"
+                  readonly>
+        </textarea>
+
+        <div class="absolute top-0 right-4">
+          <span id="copy-confirmation" class="hidden text-sky-700 text-sm ml-2">
+            Copied!
+          </span>
+
+          <button
+            id="copy-button"
+            class="hidden mt-4 px-4 py-2 bg-sky-700 text-white rounded hover:bg-sky-900 text-sm">
+            Copy HTML
+          </button>
+        </div>
+      </div>
     </main>
     <footer class="p-4 text-sm text-gray-700">
       <ul class="md:flex gap-8 list-disc list-inside">
@@ -65,6 +80,19 @@
       const dropArea  = document.getElementById("drop-area");
       const fileInput = document.getElementById("file-input");
       const textArea  = document.getElementById("text-area");
+      const copyButton = document.getElementById("copy-button");
+      const copyConfirmation = document.getElementById("copy-confirmation");
+
+      copyButton.addEventListener("click", () => {
+        navigator.clipboard.writeText(textArea.value || textArea.innerHTML);
+
+        copyConfirmation.classList.remove("hidden");
+        setTimeout(() => {
+          copyConfirmation.classList.add("hidden");
+        }, 1200);
+      });
+
+
 
       async function handleFile(file) {
         const fileContent = await file.text();
@@ -79,6 +107,7 @@
 
         textArea.innerHTML = data.html;
         textArea.classList.remove("hidden");
+        copyButton.classList.remove("hidden");
         dropArea.classList.add("hidden");
       }
 
