--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                   min-h-[75vh] flex flex-col place-items-center justify-center
                   gap-4 text-lg cursor-pointer">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-upload-icon lucide-upload size-20 text-gray-300"><path d="M12 3v12"/><path d="m17 8-5-5-5 5"/><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/></svg>
-        <div class="select-none px-4">
+        <div class="select-none px-4 text-center">
           Drag n' drop, or
           click to select an <code>.eml</code> file to upload
         </div>
